<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:title="@string/dashboard"
            android:icon="@drawable/ic_baseline_dashboard_24"

            />
        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_baseline_person_24"
            />
        <item
            android:id="@+id/AboutApp"
            android:title="@string/about_app"
            android:icon="@drawable/ic_baseline_info_24"/>
        <item
            android:id="@+id/logOut"
            android:title="@string/logout"
            android:icon="@drawable/ic_baseline_login_24"
            />
        <item
            android:id="@+id/exit"
            android:title="@string/exit"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            />

    </group>


</menu>